# cpp-game-server-sample

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md
.github/: ci.yml
.github/workflows/: ci.yml
doc/: architecture.md
src/: main.cpp
src/app/: ServerApp.cpp  ServerApp.h
src/common/: Job.h  Types.h
src/log/: Logger.h
src/logic/: DbWorker.cpp  DbWorker.h  GameWorker.cpp  GameWorker.h  HeartbeatTimer.cpp  HeartbeatTimer.h  JobQueue.cpp  JobQueue.h  LogicWorker.cpp  LogicWorker.h
src/net/: Listener.cpp  Listener.h  PacketBuffer.cpp  PacketBuffer.h  PacketBuilder.cpp  PacketBuilder.h  PacketHandler.cpp  PacketHandler.h  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
src/user/: User.cpp  User.h  UserManager.cpp  UserManager.h
src/worker/: Worker.cpp  Worker.h  WorkerManager.cpp  WorkerManager.h
tests/: README.md  client.py  loadbot.py
